--- a/Rest-api/package.json
+++ b/Rest-api/package.json
@@ -9,17 +9,17 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/PetyaNacheva/REST-api.git"
+    "url": "git+https://github.com/BoogyHS/REST-api.git"
   },
   "keywords": [
     "rest-api"
   ],
-  "author": "PetyaNacheva",
+  "author": "BoogyHS",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/PetyaNacheva/REST-api/issues"
+    "url": "https://github.com/BoogyHS/REST-api/issues"
   },
-  "homepage": "https://github.com/PetyaNacheva/REST-api#readme",
+  "homepage": "https://github.com/BoogyHS/REST-api#readme",
   "dependencies": {
     "bcrypt": "^5.0.0",
     "cookie-parser": "^1.4.5",
